crates/vega-codegen/tests/compile_errors/type_error_input_data.rs
vega_codegen::algebra!(bool);

fn main() {
    eprintln!("This is nothing");
}